<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chill</string>
    <string name="auth_1">A whole new</string>
    <string name="auth_2">communication experience</string>
    <string name="auth_nickname">Nick name</string>
    <string name="auth_password">Password</string>
    <string name="auth_go">Go!</string>
    <string name="title_activity_teach_screens">TeachScreens</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_teach">TeachActivity</string>
    <string name="hs_dialogs">Dialogs</string>
    <string name="done">Done</string>
    <string name="more">More</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="change">Change password?</string>
    <string name="searchuser">Search</string>
    <string name="removeuser">Delete</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="contacts">Address book</string>
    <string name="addfr">Add friends</string>
    <string name="replay">Reply</string>
    <string name="choosefavourite">Choose your 6 fav icons</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tellus"><u>Tell us what you want!</u></string>
    <string name="choosechill">Choose. Select. Chill.</string>
    <string name="stuffcoming">More stuff coming!</string>
    <string name="title_activity_dialogs">Dialogs</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_send">SendActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_more">More</string>
    <string name="sendsms">Invite your friend</string>
    <string name="sendsms2">Chill together!</string>
    <string name="oops">Oups... no </string>
    <string name="send">Send</string>
    <string name="presstoopen">Press to open</string>
    <string name="promocode">Promocode</string>
    <string name="haveapromocode">Have a promocode?</string>
    <string name="getperks">Enter to get perks from Chill</string>
    <string name="got">Go</string>
    <string name="tabcontacts">Add friends</string>
    <string name="tabapps">Add apps</string>
    <string name="oops2"> friends Chilling</string>
    <string name="coops">Oups... Contacts list is empty</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="facebook_app_id">979024212163109</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_smssender">SMSSender</string>
    <string name="title_activity_promo">PromoActivity</string>
    <string name="no_internet">No internet</string>

</resources>
