<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/search_users"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView8"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/rect" />

    <TextView
        android:id="@+id/nickname_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_users"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="19sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/line_new2"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_users"
        android:background="@drawable/rect"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ImageView
        android:id="@+id/plot0"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line_new2"
        android:background="@drawable/rect" />

    <ImageView
        android:id="@+id/sent_icon_image"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/plot0"
        android:background="@drawable/rect"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ImageView
        android:id="@+id/send6"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sent_icon_image"
        android:background="@drawable/rect" />

    <EditText
        android:id="@+id/promocode_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/line_new2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_users"
        android:background="@null"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="140dp"
        android:paddingTop="4dp" />

    <EditText
        android:id="@+id/editPassword_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sent_icon_image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/plot0"
        android:background="@null"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="140dp"
        android:paddingTop="3dp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/send6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:background="@null"
        android:clickable="true"
        android:onClick="logOut"
        android:padding="10dp"
        android:text="@string/logout"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sent_icon_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/change"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#928e8b"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/sent_icon_image"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="21dp"
        android:text="@string/auth_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000207"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_column="17"
        android:layout_marginTop="16dp"
        android:layout_row="4"
        android:text="@string/action_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#6a6a6a"
        android:textSize="20sp" />

    <Button
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignEnd="@+id/search_users"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/search_users"
        android:background="@null"
        android:clickable="true"
        android:onClick="done"
        android:singleLine="true"
        android:text="@string/done"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00cea0"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/search_users"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="21dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000207"
        android:textSize="19sp" />

</RelativeLayout>
