<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".SearchActivity">

    <TabHost
        android:id="@+id/tabHost2"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:longClickable="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:showDividers="end">
            </TabWidget>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvTab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" ">
                </TextView>
                <TextView
                    android:id="@+id/tvTab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" ">
                </TextView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/search_field"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rect"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:hint="@string/searchuser"
        android:inputType="textPersonName" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:indeterminate="true"
        android:translationZ="2dp"
        android:layout_marginRight="15dp"
        android:alpha="0"
        android:layout_marginBottom="13dp"
        android:layout_alignRight="@+id/search_field"
        android:layout_centerVertical="true"
        android:layout_alignBottom="@+id/search_field" />

    <Button
        android:background="@null"
        android:id="@+id/twitter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:onClick="twitterClick"
        android:text="@string/twitter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#5fabdd"
        android:textStyle="bold"
        android:visibility="visible"
        android:clickable="true" />

    <Button
        android:background="@null"
        android:id="@+id/facebook_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:onClick="facebookClick"
        android:text="@string/facebook"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3f5495"
        android:textStyle="bold"
        android:visibility="visible"
        android:clickable="true" />

    <Button
        android:background="@null"
        android:id="@+id/addressbook_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:onClick="addressClick"
        android:text="@string/contacts"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ecaf21"
        android:textStyle="bold"
        android:visibility="visible"
        android:clickable="true" />

    <ListView
        android:id="@+id/listSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_field"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:dividerHeight="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:headerDividersEnabled="false"
        android:paddingTop="1px" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/oops"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00cea0"
        android:textSize="20sp"
        android:visibility="invisible" />

    <com.facebook.share.widget.ShareButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/facebook_text"
        android:layout_alignRight="@+id/facebook_text"
        android:layout_below="@+id/textView8"
        android:visibility="invisible" />

</RelativeLayout>
