<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".SMSSender">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:id="@+id/imageView"
        android:background="@drawable/rect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView15"
        android:textColor="#6a6a6a"
        android:layout_row="4"
        android:layout_column="17"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="nick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sendsms"
        android:id="@+id/textView16"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:textColor="#00cea0"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sendsms2"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:textColor="#00cea0"
        android:layout_marginTop="5dp"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:textColor="#ffa0a0a2"
        android:textSize="19sp"
        android:layout_below="@+id/editText2"
        android:gravity="top|center_horizontal"
        android:hint="Message"
        android:padding="10dp" />

    <Button
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/send"
        android:id="@+id/textView18"
        android:singleLine="true"
        android:textColor="#00cea0"
        android:clickable="true"
        android:onClick="sendClick"
        android:textSize="17sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="50dp"
        android:background="@drawable/rect"
        android:hint="Phone Number"
        android:textColor="#ffa0a0a2"
        android:layout_centerInParent="true"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal" />

</RelativeLayout>
